--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gl-mat3": "^2.0.0",
+    "gl-matrix": "^3.4.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
