--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "maxrects-packer": "^2.7.3",
     "rbush": "^4.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
