--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^8.3.9",
+    "@mantine/hooks": "^8.3.9",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
     "maxrects-packer": "^2.7.3",
